<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    	
    <item
        android:id="@+id/atn_direct_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/discover_peers_button"
        android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/listen"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/listen_button" 
        android:showAsAction="always|withText"/>
       
    <item
        android:id="@+id/group_create"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/group_create_button"
        android:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/group_remove"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/group_remove_button"
        android:showAsAction="always|withText" />
    
    <item
        android:id="@+id/pin_any"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/pin_any_button"
        android:showAsAction="always|withText"/>
    
    <!-- 
    <item
        android:id="@+id/pin_cancel"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/pin_cancel_button"
      	android:showAsAction="always|withText"/>
    -->
  
</menu>
