<?xml version="1.0" encoding="utf-8"?>
<!-- android:visibility="gone"
android:background="@drawable/details_view" -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_view">

    <LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="match_parent"
		android:layout_height="300dip"
		android:layout_gravity="center"
		android:orientation="vertical" >
		    <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	            <Button
	                android:id="@+id/btn_play"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/media_play_button" />
	            
	            <Button
	                android:id="@+id/btn_pause"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/media_pause_button" />
	            
	            <Button
	                android:id="@+id/btn_stop"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/media_stop_button" />
	            
	            <Button
	                android:id="@+id/btn_idr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/media_send_idr" />
	    	</LinearLayout>
	    	
		    <LinearLayout
				android:layout_width="500dip"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:orientation="vertical" >
					<SurfaceView
						android:id="@+id/surfaceView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
			</LinearLayout>
	</LinearLayout>

    <LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
        <LinearLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/linearLayout1"
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	        <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            <Button
	                android:id="@+id/btn_connect_pbc"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/connect_peer_button_pbc" />
	            
	            <Button
	                android:id="@+id/btn_connect_display"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/connect_peer_button_display" />
	            
	            <Button
	                android:id="@+id/btn_connect_keypad"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/connect_peer_button_keypad" />
	            
	            <Button
	                android:id="@+id/btn_disconnect"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/disconnect_peer_button" />
	        </LinearLayout>

	        <TextView
	            android:id="@+id/device_address"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/device_ip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/device_info"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/group_owner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/group_ip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	         android:id="@+id/wps_dialog_txt"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/label_me" />
	        
	    </LinearLayout>
	    
		<!-- <LinearLayout
	        android:layout_width="match_parent"
	        android:id="@+id/status_bar"
	        android:orientation="vertical"
	        android:layout_gravity="bottom"
	        android:layout_height="37dp"
	        android:layout_marginBottom="3dp"
	        android:background="@android:color/background_dark">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:layout_margin="5dp"
	            android:textColor="@android:color/white"
	            android:id="@+id/status_text">
	        </TextView>
	    </LinearLayout> -->
	    
    </LinearLayout>

</LinearLayout>
